Upgrading to NullAway 0.13.6.